# flow-marketplace

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai-planner-prd-v3.md  claude-teammate-wrapper  package.json
.beads/: config.yaml  dolt-monitor.pid  dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.brv/: config.json  instance.json
.brv/context-tree/: .snapshot.json
.brv/sessions/: active.json  session-2026-02-27T08-24-41-agent-se.json  session-2026-02-27T08-25-13-agent-se.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: bump-plugin-version.sh
.dolt/: sql-server.info
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md  security.md
.github/workflows/: ci.yml  stale.yml  (+2 more)
plugins/flow/skills/ai-review/: SKILL.md  pyproject.toml
plugins/flow/skills/ai-review/agents/: critic-implementation.md  critic-performance.md  critic-security.md  judge.md  planner.md
plugins/flow/skills/ai-review/references/: convergence-rules.md  scoring-rubric.md  state-schema.json
plugins/flow/skills/ai-review/scripts/: aggregation.py  convergence.py  orchestrator.py  state_manager.py
plugins/flow/skills/ai-review/scripts/agents/: critic_agent.py  judge_agent.py  planner_agent.py
plugins/flow/skills/ai-review/templates/: plan-output.md
(+137 files in other folders)
