[project]
name = "ai-review"
version = "0.1.0"
description = "AI Multi-Agent Plan Review Engine"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "openai-agents>=0.12.5",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
